--- a/app/src/main/res/layout/activity_post_detail.xml
+++ b/app/src/main/res/layout/activity_post_detail.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.PostsActivity">
+        tools:context=".ui.postdetail.PostDetailActivity">
 
     <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -16,22 +16,23 @@
             app:layout_constraintEnd_toEndOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/post_recycler_view"
+            android:id="@+id/post_detail_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@+id/toolbar"
             app:layout_constraintBottom_toBottomOf="parent"
             android:paddingBottom="@dimen/value_8dp"
-            tools:listitem="@layout/post_list_item"/>
+            tools:listitem="@layout/comment_list_item"/>
+
 
     <androidx.core.widget.ContentLoadingProgressBar
-            android:id="@+id/post_loader"
+            android:id="@+id/post_detail_loader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="?android:attr/progressBarStyleLarge"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            style="?android:attr/progressBarStyleLarge"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
     />
 
