--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,14 +6,38 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="toolbarStyle">@style/ToolbarStyle</item>
         <item name="android:textAppearance">@style/TextAppearance.MaterialComponents.Body2</item>
+        <item name="materialCardViewStyle">@style/CardViewStyle</item>
+        <item name="android:progressBarStyle">?android:attr/progressBarStyleLarge</item>
+        <item name="colorControlNormal">@color/white</item>
 
     </style>
 
-    <style name="AppTheme.NoActionBar">
+    <style name="CardViewStyle" parent="Widget.MaterialComponents.CardView">
+        <item name="cardCornerRadius">@dimen/value_8dp</item>
+        <item name="cardElevation">@dimen/value_8dp</item>
+    </style>
+
+    <style name="ToolbarStyle" parent="Widget.MaterialComponents.Toolbar">
+        <item name="popupTheme">@style/AppTheme.PopupOverlay</item>
+        <item name="theme">@style/AppTheme.AppBarOverlay</item>
+        <item name="titleTextColor">@color/white</item>
+        <item name="android:elevation">@dimen/value_8dp</item>
+        <item name="android:background">?attr/colorPrimary</item>
+
+    </style>
+
+
+
+    <style name="WhiteHeadLine" parent="TextAppearance.AppCompat.Body1">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <!--<style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-    </style>
+    </style>-->
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
