--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,7 @@
 
     <color name="comments_header">#03A9F4</color>
 
+    <color name="off_white">#F7F7F7</color>
+
     <color name="white">#ffffff</color>
 </resources>
