--- a/app/src/main/res/layout/activity_posts.xml
+++ b/app/src/main/res/layout/activity_posts.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.PostsActivity">
+    tools:context=".ui.posts.PostsActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -20,7 +20,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
 
-        android:paddingBottom="@dimen/value_8dp"
         app:layout_constraintBottom_toBottomOf="parent"
 
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
@@ -31,8 +30,8 @@
         android:id="@+id/post_loader"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
-
         android:layout_height="wrap_content"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,36 +39,6 @@
 
         tools:visibility="gone" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/post_error_message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableTop="@drawable/ic_warning"
-        android:gravity="center"
-        android:text="@string/error_message"
-        app:layout_constraintBottom_toTopOf="@id/post_retry_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-
-        app:layout_constraintVertical_chainStyle="packed" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/post_retry_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/value_16dp"
-        android:text="@string/retry"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/post_error_message" />
-
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/post_error_state_group"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:constraint_referenced_ids="post_retry_button, post_error_message" />
+    <include layout="@layout/error_state_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
