--- a/app/src/main/res/layout/detail_comment_list_item.xml
+++ b/app/src/main/res/layout/detail_comment_list_item.xml
@@ -1,64 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/off_white">
+
+
+    <TextView
+        android:id="@+id/detail_comment_list_item_author_name"
+        style="@style/TextAppearance.MaterialComponents.Body2"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/off_white"
->
+
+        android:layout_marginTop="@dimen/value_8dp"
+        android:paddingStart="@dimen/value_16dp"
+        android:paddingEnd="@dimen/value_16dp"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/detail_comment_list_item_author_email"
+
+        tools:text="Name" />
 
     <TextView
-            android:id="@+id/detail_comment_list_item_author"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            style="@style/TextAppearance.MaterialComponents.Overline"
+        android:id="@+id/detail_comment_list_item_author_email"
+        style="@style/TextAppearance.MaterialComponents.Overline"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
 
-            android:layout_marginTop="@dimen/value_8dp"
-            android:paddingStart="@dimen/value_16dp"
-            android:paddingEnd="@dimen/value_16dp"
+        android:layout_marginTop="@dimen/value_8dp"
+        android:paddingStart="@dimen/value_16dp"
+        android:paddingEnd="@dimen/value_16dp"
 
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/detail_comment_list_item_title"
-            app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/detail_comment_list_item_author_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
 
-            tools:text="Author"
-    />
+        tools:text="Author" />
 
     <TextView
-            android:id="@+id/detail_comment_list_item_title"
-            style="@style/TextAppearance.MaterialComponents.Body2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+        android:id="@+id/detail_comment_list_item_body"
+        style="@style/TextAppearance.MaterialComponents.Caption"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
 
-            android:layout_marginTop="@dimen/value_8dp"
-            android:paddingStart="@dimen/value_16dp"
-            android:paddingEnd="@dimen/value_16dp"
+        android:layout_marginTop="@dimen/value_8dp"
+        android:paddingStart="@dimen/value_16dp"
+        android:paddingEnd="@dimen/value_16dp"
+        android:paddingBottom="@dimen/value_8dp"
 
+        app:layout_constraintEnd_toEndOf="@+id/detail_comment_list_item_author_name"
+        app:layout_constraintStart_toStartOf="@+id/detail_comment_list_item_author_name"
+        app:layout_constraintTop_toBottomOf="@id/detail_comment_list_item_author_email"
 
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/detail_comment_list_item_author"
-
-            tools:text="Comment title"/>
-
-    <TextView
-            android:id="@+id/detail_comment_list_item_body"
-            style="@style/TextAppearance.MaterialComponents.Caption"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-
-            android:layout_marginTop="@dimen/value_8dp"
-            android:paddingStart="@dimen/value_16dp"
-            android:paddingEnd="@dimen/value_16dp"
-            android:paddingBottom="@dimen/value_8dp"
-
-            app:layout_constraintEnd_toEndOf="@+id/detail_comment_list_item_title"
-            app:layout_constraintStart_toStartOf="@+id/detail_comment_list_item_title"
-            app:layout_constraintTop_toBottomOf="@id/detail_comment_list_item_title"
-
-            tools:text="Comment body"
-    />
+        tools:text="Comment body" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
