--- a/app/src/main/res/layout/detail_post_list_item.xml
+++ b/app/src/main/res/layout/detail_post_list_item.xml
@@ -1,81 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/value_16dp"
-        tools:context=".ui.postdetail.PostDetailActivity">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="@dimen/value_16dp"
+    tools:context=".ui.posts.detail.PostDetailActivity">
 
     <ImageView
-            android:id="@+id/post_detail_list_item_avatar"
-            android:layout_width="@dimen/post_detail_avatar"
-            android:layout_height="@dimen/post_detail_avatar"
+        android:id="@+id/post_detail_list_item_avatar"
+        android:layout_width="@dimen/post_detail_avatar"
+        android:layout_height="@dimen/post_detail_avatar"
 
-            android:layout_marginEnd="@dimen/value_16dp"
+        android:layout_marginEnd="@dimen/value_16dp"
 
-            app:layout_constraintEnd_toStartOf="@id/post_detail_list_item_author"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+        android:contentDescription="@string/avatar_description"
+        android:elevation="@dimen/value_16dp"
+        android:scaleType="centerCrop"
 
-            android:scaleType="centerCrop"
-            android:contentDescription="@string/avatar_description"
-    />
-
-    <TextView
-            android:id="@+id/post_detail_list_item_author"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-
-            app:layout_constraintStart_toEndOf="@id/post_detail_list_item_avatar"
-            app:layout_constraintTop_toTopOf="@+id/post_detail_list_item_avatar"
-            app:layout_constraintEnd_toEndOf="parent"
-
-            style="@style/TextAppearance.MaterialComponents.Overline"
-
-            tools:text="Author"
-    />
+        app:layout_constraintEnd_toStartOf="@id/post_detail_list_item_author"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-            android:id="@+id/post_detail_list_item_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+        android:id="@+id/post_detail_list_item_author"
+        style="@style/TextAppearance.MaterialComponents.Overline"
+        android:layout_width="0dp"
 
-            android:layout_marginTop="@dimen/value_8dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/post_detail_list_item_avatar"
 
-            app:layout_constraintStart_toStartOf="@+id/post_detail_list_item_author"
-            app:layout_constraintTop_toBottomOf="@+id/post_detail_list_item_author"
-            app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/post_detail_list_item_avatar"
 
-            style="@style/TextAppearance.MaterialComponents.Body2"
+        tools:text="Author" />
 
-            tools:text="Title"
-    />
     <TextView
-            android:id="@+id/post_detail_list_item_body"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+        android:id="@+id/post_detail_list_item_title"
+        style="@style/TextAppearance.MaterialComponents.Body2"
+        android:layout_width="0dp"
 
-            android:layout_marginTop="@dimen/value_8dp"
+        android:layout_height="wrap_content"
 
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/barrier"
+        android:layout_marginTop="@dimen/value_8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/post_detail_list_item_author"
 
-            style="@style/TextAppearance.MaterialComponents.Body2"
-            android:maxLines="5"
+        app:layout_constraintTop_toBottomOf="@+id/post_detail_list_item_author"
 
-            tools:text="Body"
-    />
+        tools:text="Title" />
+
+    <TextView
+        android:id="@+id/post_detail_list_item_body"
+        style="@style/TextAppearance.MaterialComponents.Body2"
+        android:layout_width="0dp"
+
+        android:layout_height="wrap_content"
+
+        android:layout_marginTop="@dimen/value_8dp"
+        android:maxLines="5"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/barrier"
+
+        tools:text="Body" />
 
     <androidx.constraintlayout.widget.Barrier
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        android:id="@+id/barrier"
+        android:layout_width="wrap_content"
 
-            android:id="@+id/barrier"
-            app:barrierDirection="bottom"
-            app:constraint_referenced_ids="post_detail_list_item_title,post_detail_list_item_avatar"
-    />
+        android:layout_height="wrap_content"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="post_detail_list_item_title,post_detail_list_item_avatar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
